<resources>
    <string name="app_name">Astro Pollo</string>
    <string name="google_maps_api">xxx</string>

    <string name="app_registro">android 1.0.6</string>

    <string name="astro_pollo">Astro Pollo</string>
    <string name="logotipo">Logotipo</string>
    <string name="acceder">Acceder</string>
    <string name="salir">Salir</string>
    <string name="registro">Registro</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="constrasena_olvidada">Contraseña olvidada?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="correo_opcional">Correo (Opcional)</string>
    <string name="cambio_de_contrasena">Cambio de Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="recuperacion_de_contrasena">Recuperación de contraseña</string>
    <string name="enviaremos_un_codigo">Enviaremos un código de recuperación a tu correo electrónico registrado</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="ingrese_su_correo_electronico_registrado">Ingrese su Correo Electrónico Registrado</string>
    <string name="ingresar_codigo_que_hemos_enviado_atu_correo_registrado">Ingresa el código que hemos enviado a tu correo electrónico registrado</string>
    <string name="reintentar_envio">Reintentar Envío</string>
    <string name="sin_conexion">Sin conexión</string>
    <string name="usuario_es_requerido">Usuario es requerido</string>
    <string name="correo_requerido">Correo es requerido</string>
    <string name="correo_es_invalido">Correo es inválido</string>
    <string name="contrasena_es_requerido">Contraseña es requerido</string>
    <string name="minimo_4_caracter_para_contrasena">Mínimo 4 caracteres para Contraseña</string>
    <string name="completar_registro">Completar Registro</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="historial">Historial</string>
    <string name="menu">Menu</string>
    <string name="borrar">Borrar</string>
    <string name="carrito">Carrito</string>
    <string name="ubicación_desconocida">Ubicación desconocida</string>
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="permiso_localizacion_denegado">Permiso para acceder a localización denegado</string>
    <string name="lo_sentimos_no_ofrecemos_nuestro">Lo sentimos, no ofrecemos nuestro servicio en esta zona</string>
    <string name="guardar_direccion">Guardar Dirección</string>
    <string name="guardado">Guardado</string>
    <string name="la_nueva_direccion">La nueva dirección ha sido agregada correctamente.</string>
    <string name="seleccionado">Seleccionado</string>
    <string name="agregar_una_direccion">Agregar una Dirección</string>
    <string name="seleccionar_ubicacion">Seleccionar ubicación</string>
    <string name="cargando">Cargando</string>
    <string name="direccion_requerido">Dirección requerida</string>
    <string name="opciones">Opciones</string>
    <string name="google_maps_no_instalado">Porfavor instalar Servicios Google Play</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="punto_de_referencia_opcional">Punto de Referencia (Opcional)</string>
    <string name="direccion_de_entrega">Dirección de Entrega</string>
    <string name="nombre_es_requerido">Nombre es Requerido</string>
    <string name="telefono_es_requerido">Teléfono es Requerido</string>
    <string name="punto_de_referencia">Punto de Referencia</string>
    <string name="ordenes">Ordenes</string>
    <string name="categorias">Categorias</string>
    <string name="populares">Populares</string>
    <string name="ver_mas">Ver Más</string>
    <string name="productos">Productos</string>
    <string name="producto">Producto</string>
    <string name="agregar_a_la_orden">Agregar a la Orden</string>
    <string name="elegir_cantidad">ELEGIR CANTIDAD</string>
    <string name="usuario_requerido">Usuario es requerido</string>
    <string name="password_requerido">Contraseña es requerido</string>
    <string name="datos_incorrectos">Datos incorrectos</string>
    <string name="se_eliminara">Se eliminara todos los productos agregados</string>
    <string name="borrar_carrito">Borrar Carrito</string>
    <string name="orden_procesar">Sub total: $%1$s</string>
    <string name="carrito_vacio">Carrito de Compras vacío </string>
    <string name="carrito_borrado">Carrito de Compras Borrado </string>
    <string name="producto_eliminado">Producto eliminado</string>
    <string name="producto_no_encontrado">Producto no encontrado</string>
    <string name="actualizado">Actualizado</string>
    <string name="total">Total</string>
    <string name="direccion_de_envio">Dirección de envío</string>
    <string name="metodo_entrega">Metodo de Entrega</string>
    <string name="a_domicilio">A Domicilio</string>
    <string name="nota_orden">Nota para la orden (Ejemplo: tocar timbre)</string>
    <string name="nota">Nota</string>
    <string name="confirmar_orden">Confirmar Orden</string>
    <string name="cliente">Cliente</string>
    <string name="procesar_orden">Procesar Orden</string>
    <string name="carrito_no_encontrado">Carrito no encontrado</string>
    <string name="agregar_cupon">Agregar Cupón</string>
    <string name="información_de_entrega">Información de Entrega</string>
    <string name="borrar_cupon">Borrar Cupón</string>
    <string name="cupon">Cupón</string>
    <string name="agregar">Agregar</string>
    <string name="verificar">Verificar</string>
    <string name="cupon_es_requerido">Cupón es requerido</string>
    <string name="cupon_no_valido">Cupón no Válido</string>
    <string name="sub_total">Sub Total</string>
    <string name="error_al_enviar_orden">Error al enviar la orden</string>
    <string name="perfil">Perfil</string>
    <string name="direcciones">Direcciones</string>
    <string name="horarios">Horarios</string>
    <string name="historial_de_compras">Historial de Compras</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>
    <string name="actualizar_contrasena">Actualizar Contraseña</string>
    <string name="contrasena_actualizada">Contraseña actualizada</string>
    <string name="no_borrar">No Borrar</string>
    <string name="seleccionar_direccion">Seleccionar Dirección</string>
    <string name="direccion_seleccionada">Dirección Seleccionada</string>
    <string name="no_se_puede_eliminar_direccion_ultima">No se puede eliminar, se requiere mínimo 1 dirección</string>
    <string name="borrar_esta_direccion">Borrar esta dirección</string>
    <string name="direccion_borrada">Dirección Borrada</string>
    <string name="ordenes_activas">Ordenes Activas</string>
    <string name="ver_productos">Ver Productos</string>
    <string name="estados_de_orden">Estados de Orden</string>
    <string name="motorista">Motorista</string>
    <string name="completar_orden">COMPLETAR ORDEN</string>
    <string name="estados">Estados</string>
    <string name="enviar_calificacion">Enviar calificación</string>
    <string name="nota_opcional">Nota (Opcional)</string>
    <string name="cancelar_orden">Cancelar Orden</string>
    <string name="orden_cancelada">Orden Cancelada</string>
    <string name="placa">Placa</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="motorista_no_encontrado">Motorista no encontrado</string>
    <string name="calificar_orden">Calificar Orden</string>
    <string name="la_orden_no_se_puede_calificar">La orden no se puede calificar</string>
    <string name="gracias">Gracias</string>
    <string name="correo_no_registrado">Correo no registrado</string>
    <string name="correo_electronico_es_requerido">Correo electrónico es requerido</string>
    <string name="correo_enviado">Correo enviado</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="codigo_incorrecto">Código incorrecto</string>
    <string name="nota_para_este_producto">Nota para este producto</string>
    <string name="notas">Notas</string>
    <string name="ver_estado_de_la_orden">Ver Estado de la Orden</string>
    <string name="precio">Precio</string>
    <string name="unidades">Unidades</string>
    <string name="producto_no_disponible">Producto no disponible</string>
    <string name="el_producto_marcado_no">El producto Marcado no se encuentra disponible, puede eliminarlo deslizando hacia los lados. Gracias</string>
    <string name="carrito_de_compras_no_encontrado">Carrito de compras no encontrado</string>
    <string name="para_eliminar_un_producto_deslice">Para eliminar un producto, deslice hacia los lados.</string>
    <string name="no_hay_ordenes">No hay Ordenes</string>
    <string name="muchas_gracias">Muchas Gracias</string>
    <string name="premios">Premios</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="usuario_dospuntos">Usuario: </string>
    <string name="reportar_problema">Reportar Problema</string>
    <string name="nota_problema">Describe si encontraste un problema en la Aplicación.</string>
    <string name="enviar_nota">Enviar Nota</string>
    <string name="mi_primer_orden">Mi Primera Orden (Prueba)</string>
    <string name="punto_de_referencia_requerido">Punto de referencia es requerido</string>




</resources>