<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCremaV1">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <include layout="@layout/toolbar_titulo"></include>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtmensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorGrisv2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/nota_problema"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputProblema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/nota"
                    app:boxStrokeColor="@color/colorGrisv2"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/colorGrisv2"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEditProblema"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:drawableStart="@drawable/icono_pregunta"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:text=""
                        android:inputType="text|textPersonName"
                        android:maxLength="500"
                        android:paddingStart="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button_corner"
                    android:text="@string/enviar_nota"
                    android:textColor="@color/colorBlanco" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>
