<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco">

    <include
        android:id="@+id/superior"
        layout="@layout/toolbar_titulo" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/superior"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/producto"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/arthura_medium"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/arthura_regular"
                android:textColor="@color/colorGrisv1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/arthura_regular"
                android:textColor="@color/colorGrisv2"
                android:textSize="17sp" />


            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgNumeroMenos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/btnmenos" />

                <TextView
                    android:id="@+id/txtNumeroCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="#373b54"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="1" />

                <ImageView
                    android:id="@+id/imgNumeroMas"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/btnplus" />
            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/notas"
                android:textColor="@color/colorNegro"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/nota_para_este_producto"
                android:inputType="text"
                android:maxLength="400"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorNegro"
                android:textSize="14sp"
                tools:ignore="Autofill" />






            <TextView
                android:id="@+id/txtDinero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorGrisv2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_corner_color"
                android:text="@string/agregar_a_la_orden"
                android:textColor="@color/colorBlanco"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>