<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCremaV1"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/toolbar_principal"></include>

        <ScrollView
            android:id="@+id/scrollView"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/micard"
                    app:cardCornerRadius="6dp"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="#5A5A5A"
                        app:sliderIndicatorUnselectedColor="#FFF"
                        app:sliderScrollTimeInSec="1"
                        app:sliderStartAutoCycle="true" />

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btnPrimera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:visibility="gone"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_corner_verde"
                    android:text="@string/mi_primer_orden"
                    android:textColor="@color/colorBlanco" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textoTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/categorias"
                        android:textColor="@color/colorNaranja"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/txtVerMas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/ver_mas"
                        android:textColor="@color/colorGrisv1"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerCategorias"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="14dp"
                        app:spanCount="2"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        android:scrollbars="none" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/populares"
                        android:textSize="18sp"
                        android:textColor="@color/colorNaranja"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="25dp"
                        android:textStyle="bold"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerPopulares"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="100dp"
                        android:scrollbars="none" />










            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</RelativeLayout>
